# tidalotter

./: .gitignore  LICENSE.md  README.md  main.py  pyproject.toml
src/tidalotter/: __init__.py  main.py
