[project]
name = "tidalotter"
version = "0.1.0"
description = "A TIDAL download CLI, using Otter LLC's API."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ItsThatOneJack", email = "jack@itoj.dev" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dependencies = ["requests>=2.32.4", "rich>=14.0.0"]

[project.urls]
Homepage = "https://github.com/yourusername/your-package"
Repository = "https://github.com/yourusername/your-package"
Issues = "https://github.com/yourusername/your-package/issues"

[project.scripts]
tidalotter = "your_package.main:main"
